# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

group("unittest") {
  deps = [
    "common:unittest",
    "faultloggerd:unittest",
    "local_handler:unittest",
    "process_dump:unittest",
    "procinfo:unittest",
    "sigdump_handler:unittest",
    "signal_handler:unittest",
  ]
  if (!defined(ohos_lite)) {
    testonly = true
    deps += [
      "async_stack:unittest",
      "backtrace:unittest",
      "crash_exception:unittest",
      "dump_catcher:unittest",
      "kernel_snapshot:unittest",
      "panic_handler:unittest",
      "rustc_demangle:unittest",
      "stacktrace_rust:unittest",
      "unwind:unittest",
    ]
  }
}
