# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

dfx_test_util_sources = [ "dfx_test_util.cpp" ]

if (defined(ohos_lite)) {
  static_library("dfx_test_util") {
    visibility = [ "*:*" ]
    include_dirs = [
      ".",
      "$hilog_lite_include_path",
      "$faultloggerd_path/common",
    ]
    sources = dfx_test_util_sources
    deps = [ "$hilog_lite_deps_path" ]
  }
} else {
  ohos_static_library("dfx_test_util") {
    visibility = [ "*:*" ]
    include_dirs = [
      ".",
      "$faultloggerd_path/common",
    ]
    sources = dfx_test_util_sources
    external_deps = [ "c_utils:utils" ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
