# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("crasher_config") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
    "//base/hiviewdfx/faultloggerd/tools/process_dump/",
  ]
}

ohos_executable("crasher_cpp") {
  configs = [ ":crasher_config" ]
  sources = [ "dfx_crasher.cpp" ]

  deps = [
    "//base/hiviewdfx/faultloggerd/interfaces/innerkits/signal_handler:dfx_signalhandler",
    "//developtools/bytrace_standard/bin:bytrace_inner",
    "//utils/native/base:utils",
  ]

  part_name = "faultloggerd"
  subsystem_name = "hiviewdfx"
}
