# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")
import("//build/ohos.gni")

if (defined(ohos_lite)) {
  group("panic_maker") {
    deps = []
  }
} else {
  ohos_rust_executable("rustpanic_maker") {
    sources = [ "main.rs" ]
    configs = [ "$faultloggerd_path/common/build:coverage_flags" ]
    deps = [
      "$faultloggerd_path/interfaces/rust/panic_handler:panic_handler",
      "$faultloggerd_path/interfaces/rust/stacktrace:stacktrace_rust",
    ]
    external_deps = [ "hilog:hilog_rust" ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  group("panic_maker") {
    testonly = true
    if (!use_clang_coverage) {
      deps = [ ":rustpanic_maker" ]
    }
  }
}
